[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/NotoSansJP-Regular_12.tres" type="DynamicFont" id=1]
[ext_resource path="res://textures/ui_icons/more.png" type="Texture" id=2]
[ext_resource path="res://textures/ui_icons/close.png" type="Texture" id=3]
[ext_resource path="res://textures/ui_icons/less.png" type="Texture" id=4]
[ext_resource path="res://gui/quantity_panel/QuantityPanel.gd" type="Script" id=5]

[node name="QuantityPanel" type="PanelContainer"]
margin_right = 128.0
margin_bottom = 62.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 63.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 28.0
mouse_filter = 2

[node name="Less" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 24 )
custom_constants/hseparation = 0
text = "<"
expand_icon = true

[node name="TextureButton" type="TextureRect" parent="VBoxContainer/HBoxContainer/Less"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 74.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
align = 1
max_length = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="More" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 102.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 24 )
custom_constants/hseparation = 0
text = ">"

[node name="TextureButton" type="TextureRect" parent="VBoxContainer/HBoxContainer/More"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="VBoxContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 82.0
margin_bottom = 56.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 1 )
text = "Accept"

[node name="Close" type="Button" parent="."]
margin_left = 101.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 27.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 8
size_flags_vertical = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Close"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="modal_closed" from="." to="." method="_on_QuantityPanel_modal_closed"]
[connection signal="sort_children" from="VBoxContainer" to="." method="_on_VBoxContainer_sort_children"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Less" to="." method="_on_Less_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/More" to="." method="_on_More_pressed"]
[connection signal="pressed" from="VBoxContainer/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
